--- a/n2n-ntop/docker-compose.yaml
+++ b/n2n-ntop/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
       - N2N_PASS=zctmdc_dhcp
       - 2N_SERVER=192.168.66.102:10086
     volumes:
-      - ./dhcpd.conf:/etc/dhcp/dhcpd.conf
+      - ./edge-dhcp-server/dhcpd.conf:/etc/dhcp/dhcpd.conf
     command: ["/bin/sh","-c","/user/sbin/run.sh"]
   n2n_edge_dhcp:
     image: zctmdc/n2n_ntop:latest
