--- a/n2n-ntop/supernode/docker-compose.yaml
+++ b/n2n-ntop/supernode/docker-compose.yaml
@@ -9,4 +9,4 @@ services:
     environment:
       - MODE=SUPERNODE
       - SUPERNODE_PORT=10086
-    command: ["/bin/sh","-c","/user/sbin/run.sh"]
+    command: ["/bin/sh","-c","/usr/sbin/run.sh"]
