--- a/n2n-ntop/edge-static/docker-compose.yaml
+++ b/n2n-ntop/edge-static/docker-compose.yaml
@@ -11,5 +11,5 @@ services:
       - STATIC_IP="10.0.0.10"
       - N2N_GROUP=zctmdc_dhcp
       - N2N_PASS=zctmdc_dhcp
-      - N2N_SERVER=n2n.udpfile.com:10086 -l n2n.lucktu.com:10086
+      - N2N_SERVER=n2n.lucktu.com:10086
     command: ["/bin/sh","-c","/usr/sbin/run.sh"]
