--- a/nginx_file_server/Dockerfile
+++ b/nginx_file_server/Dockerfile
@@ -13,4 +13,5 @@ ENV WORK_PATH="/workpath"
 ENV STATIC_PATH="/var/www/static/"
 
 COPY run.sh /usr/sbin/run.sh
+RUN chmod a+x /usr/sbin/run.sh
 CMD ["/bin/bash","-c","/usr/sbin/run.sh"]
