--- a/n2n-ntop/edge-static/docker-compose.yaml
+++ b/n2n-ntop/edge-static/docker-compose.yaml
@@ -12,4 +12,4 @@ services:
       - N2N_GROUP=zctmdc_dhcp
       - N2N_PASS=zctmdc_dhcp
       - N2N_SERVER=n2n.lucktu.com:10086
-    command: ["/bin/sh","-c","/usr/sbin/run.sh"]
+    command: ["/bin/sh","-c","/usr/local/sbin/run.sh"]
