--- a/n2n-ntop/supernode/docker-compose.yaml
+++ b/n2n-ntop/supernode/docker-compose.yaml
@@ -5,8 +5,8 @@ services:
     restart: always
     privileged: true
     ports:
-      - 10086/udp
+      - 10086:10086/udp
     environment:
       - MODE=SUPERNODE
       - SUPERNODE_PORT=10086
-    command: ["/bin/sh","-c","/usr/sbin/run.sh"]
+    command: ["/bin/sh","-c","/usr/local/sbin/run.sh"]
