--- a/n2n_proxy/docker-compose.yaml
+++ b/n2n_proxy/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
         - N2N_NAT=TRUE
         - N2N_ARGS=-Av
       volumes:
-        - dhcpd.conf:/etc/dhcp/dhcpd.conf
+        - ../n2n_ntop/edge-dhcp-server/dhcpd.conf:/etc/dhcp/dhcpd.conf:ro
       command: ["/bin/sh","-c","/usr/local/sbin/run.sh"]
 
     n2n_proxy_gw_dhcp:
@@ -30,7 +30,7 @@ services:
         - N2N_GATEWAY=10.0.0.1
         - N2N_ARGS=-Avr
       volumes:
-        - dhcpd.conf:/etc/dhcp/dhcpd.conf
+        - ../n2n_ntop/edge-dhcp-server/dhcpd.conf:/etc/dhcp/dhcpd.conf:ro
       ports:
         - 1080:1080
       command: ["/bin/sh","-c","/usr/local/sbin/run.sh"]
