--- a/n2n_proxy/docker-compose.yaml
+++ b/n2n_proxy/docker-compose.yaml
@@ -6,9 +6,9 @@ services:
       privileged: true
       environment:
         - MODE=DHCPD
-        - STATIC_IP=10.0.0.1
-        - N2N_GROUP=zctmdc_dhcp
-        - N2N_PASS=zctmdc_dhcp
+        - STATIC_IP=10.10.0.1
+        - N2N_GROUP=zctmdc_proxy
+        - N2N_PASS=zctmdc_proxy
         - N2N_SERVER=n2n.lucktu.com:10086
         - N2N_NAT=TRUE
         - N2N_ARGS=-Av
@@ -22,12 +22,12 @@ services:
       privileged: true
       environment:
         - MODE=DHCP
-        - N2N_GROUP=zctmdc_dhcp
-        - N2N_PASS=zctmdc_dhcp
+        - N2N_GROUP=zctmdc_proxy
+        - N2N_PASS=zctmdc_proxy
         - N2N_SERVER=n2n.lucktu.com:10086
         - N2N_GW=TURE
         - N2N_DESTINATION=192.168.0.0/16
-        - N2N_GATEWAY=10.0.0.1
+        - N2N_GATEWAY=10.10.0.1
         - N2N_ARGS=-Avr
       volumes:
         - ../n2n_ntop/edge-dhcp-server/dhcpd.conf:/etc/dhcp/dhcpd.conf:ro
@@ -41,16 +41,16 @@ services:
       privileged: true
       environment:
         - MODE=STATIC
-        - STATIC_IP=10.0.0.20
-        - N2N_GROUP=zctmdc_dhcp
-        - N2N_PASS=zctmdc_dhcp
+        - STATIC_IP=10.10.0.20
+        - N2N_GROUP=zctmdc_proxy
+        - N2N_PASS=zctmdc_proxy
         - N2N_SERVER=n2n.lucktu.com:10086
         - N2N_GW=TURE
         - N2N_DESTINATION=192.168.0.0/16
-        - N2N_GATEWAY=10.0.0.2
+        - N2N_GATEWAY=10.10.0.1
         - N2N_ARGS=-Av
       volumes:
-        - ../n2n_ntop/edge-dhcp-server/dhcpd.conf:/etc/dhcp/dhcpd.conf:ro
+        - n2n_proxy_nat/dhcpd.conf:/etc/dhcp/dhcpd.conf:ro
       ports:
-        - 1080:1080
+        - 10080:1080
       command: ["/bin/sh","-c","/usr/local/sbin/run.sh"]
