--- a/n2n_ntop/edge-dhcp-server/docker-compose.yaml
+++ b/n2n_ntop/edge-dhcp-server/docker-compose.yaml
@@ -12,6 +12,6 @@ services:
       - N2N_GROUP=zctmdc_dhcp
       - N2N_PASS=zctmdc_dhcp
       - N2N_SERVER=n2n.lucktu.com:10086
-    volumes:
-      - dhcpd.conf:/etc/dhcp/dhcpd.conf:ro
+    # volumes:
+    #   - dhcpd.conf:/etc/dhcp/dhcpd.conf:ro
     command: ["/bin/sh","-c","/usr/local/sbin/run.sh"]
