--- a/n2n_proxy/n2n_proxy_gw_static/docker-compose.yaml
+++ b/n2n_proxy/n2n_proxy_gw_static/docker-compose.yaml
@@ -14,8 +14,8 @@ services:
         - N2N_DESTINATION=192.168.0.0/16
         - N2N_GATEWAY=10.10.0.1
         - N2N_ARGS=-Av
-      volumes:
-        - ../n2n_ntop/edge-dhcp-server/dhcpd.conf:/etc/dhcp/dhcpd.conf:ro
+      # volumes:
+      #   - ../n2n_ntop/edge-dhcp-server/dhcpd.conf:/etc/dhcp/dhcpd.conf:ro
       ports:
         - 10080:1080
       command: ["/bin/sh","-c","/usr/local/sbin/run.sh"]
