--- a/n2n_ntop/Dockerfile
+++ b/n2n_ntop/Dockerfile
@@ -27,8 +27,9 @@ FROM alpine
 
 RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories
 
-RUN apk add --update --no-cache openssl dhclient dhcp-server-ldap
+RUN apk add --update --no-cache openssl dhclient dhcp-server-ldap bash
 
+COPY --from=builder /usr/local/bin/n2n-benchmark /usr/local/sbin/
 COPY --from=builder /usr/local/sbin/supernode /usr/local/sbin/
 COPY --from=builder /usr/local/sbin/edge /usr/local/sbin/
 COPY edge-dhcp-server/dhcpd.conf  /etc/dhcp/dhcpd.conf
@@ -49,4 +50,4 @@ ENV N2N_GROUP zctmdc_dhcp
 ENV N2N_PASS zctmdc_dhcp
 ENV N2N_SERVER n2n.lucktu.com:10086
 ENV N2N_ARGS -Av
-CMD ["/bin/sh","-c","/usr/local/sbin/run.sh"]
+CMD [ "/bin/bash" , "-c" , "/usr/local/sbin/run.sh" ]
