--- a/n2n_proxy/Dockerfile
+++ b/n2n_proxy/Dockerfile
@@ -3,7 +3,7 @@ FROM zctmdc/n2n_ntop
 
 MAINTAINER zctmdc <zctmdc@outlook.com>
 
-COPY --from=gost_src /bin/gost /usr/local/sbin/
+COPY --from=gost_src /bin/gost /bin/
 COPY n2n_proxy_nat/dhcpd.conf  /etc/dhcp/dhcpd.conf
 COPY run.sh /usr/local/sbin/
 COPY proxy.sh /usr/local/sbin/
@@ -16,10 +16,11 @@ RUN  chmod a+x /usr/local/sbin/run.sh \
 	&& touch /var/log/run.log 
 
 ENV N2N_DESTINATION 192.168.0.0/16
-ENV STATIC_IP 10.10.0.1
-ENV N2N_GATEWAY 10.10.0.1
+ENV STATIC_IP 10.0.10.1
+ENV N2N_GATEWAY 10.0.10.1
 ENV N2N_GW FALSE
 ENV N2N_NAT FALSE
+ENV N2N_PROXY TRUE
+ENV PROXY_ARGS -L=:1080
 
-
-CMD ["/bin/sh","-c","/usr/local/sbin/run.sh"]
+CMD ["/bin/bash","-c","/usr/local/sbin/run.sh"]
