--- a/n2n_proxy/n2n_proxy_gw_dhcp/docker-compose.yaml
+++ b/n2n_proxy/n2n_proxy_gw_dhcp/docker-compose.yaml
@@ -13,6 +13,7 @@ services:
         - N2N_DESTINATION=192.168.0.0/16
         - N2N_GATEWAY=10.0.10.1
         - N2N_ARGS=-Avr
+        - N2N_PROXY=TRUE
       # volumes:
       #   - ../n2n_ntop/edge-dhcp-server/dhcpd.conf:/etc/dhcp/dhcpd.conf:ro
       ports:
