--- a/n2n_ntop/edge-dhcp-server/docker-compose.yaml
+++ b/n2n_ntop/edge-dhcp-server/docker-compose.yaml
@@ -8,9 +8,9 @@ services:
       - MODE=DHCPD
       - SUPERNODE_PORT=10086
       - 2N_INTERFACE=edge0
-      - STATIC_IP=10.0.0.1
-      - N2N_GROUP=zctmdc_dhcp
-      - N2N_PASS=zctmdc_dhcp
+      - STATIC_IP=10.0.10.1
+      - N2N_GROUP=zctmdc_proxy
+      - N2N_PASS=zctmdc_proxy
       - N2N_SERVER=n2n.lucktu.com:10086
     # volumes:
     #   - dhcpd.conf:/etc/dhcp/dhcpd.conf:ro
