--- a/n2n-proxy/Dockerfile
+++ b/n2n-proxy/Dockerfile
@@ -1,10 +1,10 @@
 FROM ginuerzh/gost as gost_src
-FROM zctmdc/n2n_ntop
+FROM zctmdc/n2n-vpn
 
 MAINTAINER zctmdc <zctmdc@outlook.com>
 
 COPY --from=gost_src /bin/gost /bin/
-COPY n2n_proxy_nat/dhcpd.conf  /etc/dhcp/dhcpd.conf
+# COPY n2n_proxy_nat/dhcpd.conf  /etc/dhcp/dhcpd.conf
 COPY run.sh /usr/local/sbin/
 COPY proxy.sh /usr/local/sbin/
 
@@ -16,9 +16,8 @@ RUN  chmod a+x /usr/local/sbin/run.sh \
 	&& touch /var/log/run.log 
 
 ENV N2N_DESTINATION 192.168.0.0/16
-ENV STATIC_IP 10.0.10.1
 ENV N2N_GATEWAY 10.0.10.1
-ENV N2N_GW FALSE
+ENV N2N_ROUTE FALSE
 ENV N2N_NAT FALSE
 ENV N2N_PROXY TRUE
 ENV PROXY_ARGS -L=:1080
