--- a/n2n-proxy/n2n-proxy_gw_static/docker-compose.yaml
+++ b/n2n-proxy/n2n-proxy_gw_static/docker-compose.yaml
@@ -1,16 +1,16 @@
 version: "3"
 services:
     n2n_proxy_gw_static:
-      image: zctmdc/n2n_proxy:latest
+      image: zctmdc/n2n-proxy:latest
       restart: always
       privileged: true
       environment:
         - MODE=STATIC
-        - STATIC_IP=10.0.10.20
-        - N2N_GROUP=zctmdc_proxy
-        - N2N_PASS=zctmdc_proxy
+        - N2N_IP=10.0.10.20
+        - N2N_COMMUNITY=zctmdc-proxy
+        - N2N_KEY=zctmdc-proxy
         - N2N_SERVER=n2n.lucktu.com:10086
-        - N2N_GW=TURE
+        - N2N_ROUTE=TURE
         - N2N_DESTINATION=192.168.0.0/16
         - N2N_GATEWAY=10.0.10.1
         - N2N_ARGS=-Av
