--- a/n2n-vpn/edge-dhcp-server/dhcpd.conf
+++ b/n2n-vpn/edge-dhcp-server/dhcpd.conf
@@ -3,9 +3,9 @@ authoritative;
 ddns-update-style none;
 ignore client-updates;
 subnet 10.0.10.0 netmask 255.255.255.0 {
-  range 10.0.10.60 10.0.10.120;
-  option domain-name-servers 10.0.10.1;
-  option domain-name "n2n.local";
+  range 10.0.10.60 10.0.10.180;
+  # option domain-name-servers 10.0.10.1;
+  # option domain-name "n2n.local";
   # option routers 10.0.10.1;
   option subnet-mask 255.255.255.0;
   default-lease-time 600;
