--- a/n2n-vpn/edge-dhcp-server/docker-compose.yaml
+++ b/n2n-vpn/edge-dhcp-server/docker-compose.yaml
@@ -1,16 +1,16 @@
 version: "3"
 services:
   n2n_edge_dhcpd:
-    image: zctmdc/n2n_ntop:latest
+    image: zctmdc/n2n-vpn:latest
     restart: always
     privileged: true
+    network_mode: host
     environment:
       - MODE=DHCPD
-      - SUPERNODE_PORT=10086
-      - 2N_INTERFACE=edge0
-      - STATIC_IP=10.0.10.1
-      - N2N_GROUP=zctmdc_proxy
-      - N2N_PASS=zctmdc_proxy
+      - N2N_TUN=edge0
+      - N2N_IP=10.0.10.1
+      - N2N_COMMUNITY=zctmdc_proxy
+      - N2N_KEY=zctmdc_proxy
       - N2N_SERVER=n2n.lucktu.com:10086
     # volumes:
     #   - dhcpd.conf:/etc/dhcp/dhcpd.conf:ro
