--- a/n2n-vpn/Dockerfile
+++ b/n2n-vpn/Dockerfile
@@ -46,7 +46,7 @@ ENV MODE DHCP
 ENV N2N_PORT 10086
 ENV N2N_TUN edge0
 ENV N2N_IP 10.0.10.10
-ENV N2N_GROUP zctmdc_proxy
+ENV N2N_COMMUNITY zctmdc_proxy
 ENV N2N_KEY zctmdc_proxy
 ENV N2N_SERVER n2n.lucktu.com:10086
 ENV N2N_ARGS -Av
