--- a/n2n-proxy/n2n-proxy_gw_dhcp/docker-compose.yaml
+++ b/n2n-proxy/n2n-proxy_gw_dhcp/docker-compose.yaml
@@ -19,4 +19,4 @@ services:
         - ../n2n_ntop/edge-dhcp-server/dhcpd.conf:/etc/dhcp/dhcpd.conf:ro
       ports:
         - 1080:1080
-      command: ["/bin/sh","-c","/usr/local/sbin/run.sh"]
+      command: ["/bin/bash","-c","/usr/local/sbin/run.sh"]
