--- a/n2n-vpn/edge-dhcp-server/docker-compose.yaml
+++ b/n2n-vpn/edge-dhcp-server/docker-compose.yaml
@@ -14,4 +14,4 @@ services:
       - N2N_SERVER=n2n.lucktu.com:10086
     # volumes:
     #   - dhcpd.conf:/etc/dhcp/dhcpd.conf:ro
-    command: ["/bin/sh","-c","/usr/local/sbin/run.sh"]
+    command: ["/bin/bash","-c","/usr/local/sbin/run.sh"]
