--- a/n2n-proxy/docker-compose.yaml
+++ b/n2n-proxy/docker-compose.yaml
@@ -10,8 +10,8 @@ services:
     environment:
       - MODE=DHCPD
       - N2N_IP=10.0.10.1
-      - N2N_COMMUNITY=zctmdc-proxy
-      - N2N_KEY=zctmdc-proxy
+      - N2N_COMMUNITY=zctmdc_proxy
+      - N2N_KEY=zctmdc_proxy
       - N2N_SERVER=n2n.lucktu.com:10086
       - N2N_NAT=TRUE
       - N2N_PROXY=TRUE
@@ -28,8 +28,8 @@ services:
     privileged: true
     environment:
       - MODE=DHCP
-      - N2N_COMMUNITY=zctmdc-proxy
-      - N2N_KEY=zctmdc-proxy
+      - N2N_COMMUNITY=zctmdc_proxy
+      - N2N_KEY=zctmdc_proxy
       - N2N_SERVER=n2n.lucktu.com:10086
       - N2N_ROUTE=TURE
       - N2N_DESTINATION=192.168.0.0/16
@@ -53,8 +53,8 @@ services:
     environment:
       - MODE=STATIC
       - N2N_IP=10.0.10.20
-      - N2N_COMMUNITY=zctmdc-proxy
-      - N2N_KEY=zctmdc-proxy
+      - N2N_COMMUNITY=zctmdc_proxy
+      - N2N_KEY=zctmdc_proxy
       - N2N_SERVER=n2n.lucktu.com:10086
       - N2N_ROUTE=TURE
       - N2N_DESTINATION=192.168.0.0/16
