--- a/n2n-proxy/n2n-proxy_static/docker-compose.yaml
+++ b/n2n-proxy/n2n-proxy_static/docker-compose.yaml
@@ -1,6 +1,6 @@
 version: "3"
 services:
-  n2n_proxy_nat:
+  n2n_proxy_gw_static:
     build:
       context: .
       dockerfile: Dockerfile
@@ -8,13 +8,18 @@ services:
     restart: always
     privileged: true
     environment:
-      - MODE=DHCPD
-      - N2N_IP=10.0.10.1
+      - MODE=STATIC
+      - N2N_IP=10.0.10.20
       - N2N_COMMUNITY=zctmdc_proxy
       - N2N_KEY=zctmdc_proxy
       - N2N_SERVER=n2n.lucktu.com:10086
-      - N2N_NAT=TRUE
-      - N2N_PROXY=TRUE
+      - N2N_ROUTE=TURE
+      - N2N_DESTINATION=192.168.0.0/16
+      - N2N_GATEWAY=10.0.10.1
+      - N2N_ARGS=-Av
+      - N2N_PROXY=FALSE
     # volumes:
-    #   - ../n2n_ntop/edge-dhcp-server/dhcpd.conf:/etc/dhcp/dhcpd.conf:ro
+    #   - n2n_proxy_nat/dhcpd.conf:/etc/dhcp/dhcpd.conf:ro
+    # ports:
+    #   - 10080:1080
     command: ["/bin/bash", "-c", "/usr/local/sbin/run.sh"]
