--- a/n2n-vpn/docker-compose.yaml
+++ b/n2n-vpn/docker-compose.yaml
@@ -17,8 +17,9 @@ services:
       - N2N_SERVER=n2n.lucktu.com:10086
       - N2N_ARGS=-Av
     # volumes:
-    #   - ./edge-dhcp-server/dhcpd.conf:/etc/dhcp/dhcpd.conf:ro
+    #   - ./dhcpd.conf:/etc/dhcp/dhcpd.conf:ro
     command: ["/bin/bash", "-c", "/usr/local/sbin/run.sh"]
+
   n2n_edge_dhcp:
     build:
       context: .
@@ -36,6 +37,7 @@ services:
       - N2N_SERVER=n2n.lucktu.com:10086
       - N2N_ARGS=-Avr
     command: ["/bin/bash", "-c", "/usr/local/sbin/run.sh"]
+
   n2n_edge_static:
     build:
       context: .
@@ -54,6 +56,7 @@ services:
       - N2N_SERVER=n2n.lucktu.com:10086
       - N2N_ARGS=-Av
     command: ["/bin/bash", "-c", "/usr/local/sbin/run.sh"]
+
   n2n_supernode:
     image: zctmdc/n2n-vpn:latest
     restart: always
