--- a/nginx_file_server/Dockerfile
+++ b/nginx_file_server/Dockerfile
@@ -5,13 +5,17 @@ RUN set -x \
   && cat /etc/nginx/conf.d/default.conf \
   && sed -i '0,/localhost/s//_/'  /etc/nginx/conf.d/default.conf \
   && mkdir -p /var/www/static \
-  && sed -i '0,/\/usr\/share\/nginx\/html;/s//\/var\/www\/static;/'  /etc/nginx/conf.d/default.conf \
   && sed -i '0,/index.*/s//autoindex on;/'  /etc/nginx/conf.d/default.conf \
-  && cat /etc/nginx/conf.d/default.conf
+  && mv /etc/nginx/conf.d/default.conf /etc/nginx/conf.d/default.conf.example \
+  && chmod a-wx /etc/nginx/conf.d/default.conf.example
+
+COPY run.sh /usr/local/sbin/run.sh
+
+RUN chmod a+x /usr/local/sbin/run.sh
 
 ENV WORK_PATH="/workpath"
 ENV STATIC_PATH="/var/www/static/"
 
-COPY run.sh /usr/local/sbin/run.sh
-RUN chmod a+x /usr/local/sbin/run.sh
+EXPOSE 80
+
 CMD ["/bin/bash", "-c", "/usr/local/sbin/run.sh"]
