--- a/n2n_proxy/docker-compose.yaml
+++ b/n2n_proxy/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: zctmdc/n2n-proxy:latest
+    image: zctmdc/n2n_proxy:alpha
     restart: always
     privileged: true
     environment:
@@ -19,11 +19,13 @@ services:
     #   - ./dhcpd.conf:/etc/dhcp/dhcpd.conf:ro
     command: ["/bin/bash", "-c", "/usr/local/sbin/run.sh"]
 
-  n2n_proxy_gw_dhcp:
+  n2n_proxy_dhcp:
     build:
       context: .
       dockerfile: Dockerfile
-    image: zctmdc/n2n-proxy:latest
+    depends_on:
+      - n2n_proxy_nat
+    image: zctmdc/n2n_proxy:alpha
     restart: always
     privileged: true
     environment:
@@ -37,22 +39,20 @@ services:
       - N2N_ARGS=-Avr
       - N2N_PROXY=TRUE
       - PROXY_ARGS=-L=:1080
-    volumes:
-      - ../n2n_ntop/edge-dhcp-server/dhcpd.conf:/etc/dhcp/dhcpd.conf:ro
     ports:
       - 1080:1080
     command: ["/bin/bash", "-c", "/usr/local/sbin/run.sh"]
 
-  n2n_proxy_gw_static:
+  n2n_proxy_static:
     build:
       context: .
       dockerfile: Dockerfile
-    image: zctmdc/n2n-proxy:latest
+    image: zctmdc/n2n_proxy:alpha
     restart: always
     privileged: true
     environment:
       - MODE=STATIC
-      - N2N_IP=10.0.10.20
+      - N2N_IP=10.0.10.100
       - N2N_COMMUNITY=zctmdc_proxy
       - N2N_KEY=zctmdc_proxy
       - N2N_SERVER=n2n.lucktu.com:10086
