FIX docker images tag
FIX docker images  tag

--- a/nginx_file_server/docker-compose.yaml
+++ b/nginx_file_server/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: zctmdc/file-server:alpha
+    image: zctmdc/file-server:Alpha
     # volumes:
     #   - path-to-iso:/workpath:ro
     # ports:
@@ -14,7 +14,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: zctmdc/file-server:alpha
+    image: zctmdc/file-server:Alpha
     volumes:
       - .:/workpath:ro
     ports:
