--- a/n2n_proxy/docker-compose.yaml
+++ b/n2n_proxy/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: zctmdc/n2n_proxy:alpha
+    image: zctmdc/n2n_proxy:Alpha
     restart: always
     privileged: true
     environment:
@@ -25,7 +25,7 @@ services:
       dockerfile: Dockerfile
     depends_on:
       - n2n_proxy_nat
-    image: zctmdc/n2n_proxy:alpha
+    image: zctmdc/n2n_proxy:Alpha
     restart: always
     privileged: true
     environment:
@@ -47,7 +47,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: zctmdc/n2n_proxy:alpha
+    image: zctmdc/n2n_proxy:Alpha
     restart: always
     privileged: true
     environment:
