--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,16 +4,16 @@ services:
     build:
       context: n2n_ntop
       dockerfile: Dockerfile
-    image: zctmdc/n2n_ntop:alpha
+    image: zctmdc/n2n_ntop:Alpha
 
   n2n_proxy:
     build:
       context: n2n_proxy
       dockerfile: Dockerfile
-    image: zctmdc/n2n_proxy:alpha
+    image: zctmdc/n2n_proxy:Alpha
 
   file-server:
     build:
       context: nginx_file_server
       dockerfile: Dockerfile
-    image: zctmdc/file-server:alpha
+    image: zctmdc/file-server:Alpha
