--- a/my_settings/docker-compose.yaml
+++ b/my_settings/docker-compose.yaml
@@ -32,8 +32,8 @@ services:
     environment:
       - MODE=DHCPD
       - N2N_IP=10.20.30.1
-      - N2N_COMMUNITY=zctmdc_proxy
-      - N2N_KEY=zctmdc_proxy
+      - N2N_COMMUNITY=proxy_fast
+      - N2N_KEY=n2n_fast
       - N2N_SERVER=n2n.x0x.cn:10086
       - N2N_ARGS=-Avr
       - N2N_NAT=TRUE
