--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,10 +22,10 @@ services:
     build:
       context: easy-explorer
       dockerfile: Dockerfile
-    image: zctmdc/easy_explorer:Alpha
+    image: zctmdc/easy-explorer:Alpha
 
   mount_smb:
     build:
       context: mount_smb
       dockerfile: Dockerfile
-    image: zctmdc/easy_explorer:Alpha
+    image: zctmdc/easy-explorer:Alpha
